--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color:papayawhip;>
-
+<body>
+                                            
 <h2 style="font-family:didot";> Welcome!</h2>
 
 <h1 title="is a blog maintained by IQUESTIONEVERYONE;" style="border:2px solid DodgerBlue;"> Hello World!</h1>
