--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="AP-Computer-Science/styles.csss">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
