--- a/index.html
+++ b/index.html
@@ -6,44 +6,45 @@
     <meta charset="UTF-8">
 <style>
 body{
-     background-image:url("https://us.123rf.com/450wm/hospitalera/hospitalera0808/hospitalera080800018/3385214-brushed-dark-blue-metallic-background-with-central-highlight.jpg?ver=6");
-      color:#66FCF1;
-}   
+     background-image:url("http://sf.co.ua/13/04/wallpaper-2705835.jpg");
+     background-repeat:no-repeat;   
 
 a:link{
-    color: green;
+    color: #00e6e6;
     background-color:rgb(255, 99, 71);
     text-decoration: overline;
 }                                                               
 a:hover{
-    color:  ;
-    background-color:rgb(9, 100%, 64%, ,5);
+    color: purple;
+    background-color:#00e6e6;
     text-decoration:overline;       
  
 h1{ 
-    text-shadow: 3px 4px slateblue;
+    text-shadow: 3px 4px #0000ff;
     font-size:10vw;
     text-decoration: underline;
+    background-color:
 }                                                                 
                
  h2, h3{
     text-align: center;
     color:#240090;
-    font-family: big caslon, serif;
+    font-family:"big caslon, serif";
     font-size:7vw;
     font-weight: bold;
     text-decoration: overline;
+    background-color: #282828;                               
 }
 
 p{
-     border: 7px inset #190061 
+     border: 7px inset #190061;
      margin: 25px 50px 75px;
      padding:50px 25px;
      box-sizing: border-box;  
      background-color:#282828;
-     color:#66FCF1
+     color:#66FCF1;
      text-align: center;
-     font-family:didot, sans-serif;
+     font-family:"didot, sans-serif";
      font-size:5vw;
 }
 
@@ -84,11 +85,11 @@ Which really says something about the <mark>morality</mark> of the very humans w
 <img src="https://pbs.twimg.com/profile_images/808348342669307904/zP4-MhZe.jpg" alt="robotbearlol" width="400" height="300"><br>
 
 <p><blockquote cite="https://www.goodreads.com/work/quotes/1796026-i-robot">
-<i>A robot may not injure a human being or, through inaction, allow a human being to come to harm.<br>
+"A robot may not injure a human being or, through inaction, allow a human being to come to harm.<br>
 A robot must obey orders given it by human beings except where such orders would conflict with the First Law. <br>
-A robot must protect its own existence as long as such protection does not conflict with the First or Second Law.<i><br>
+A robot must protect its own existence as long as such protection does not conflict with the First or Second Law."<br>
 </blockquote></p>
-<p>-Issac Asimov, <i>I, Robot</i></p>
+<p>-Issac Asimov,<i>I, Robot</i></p>
                                                                            
 <br>
  
