--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Which really says something about the <mark>morality</mark> of the very humans w
 A robot must obey orders given it by human beings except where such orders would conflict with the First Law. <br>
 A robot must protect its own existence as long as such protection does not conflict with the First or Second Law."<br>
 </blockquote></p>
-<p>-Issac Asimov,<i>I, Robot</i></p>
+<div>-Issac Asimov,<i><b>I, Robot</i><div>
                                                                            
 <br>
  
