--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@ img {
      <h3> A common misconception about robots</h3>
      <p> Contrary to what most people believe, <i>robots are not always out to get us.</i> They are not all terminators bent on the destruction of human kind; instead, only reflections of the needs and wants of their only creators</p><br> 
      <p>If a robot or some form of artifical intelligence does rise up and create a revolution, it would need a reason.<br> 
-     If programmed like a human, it will act like one in the face of injustice... <br>
-     Which really says something about the <mark>morality</mark> of the very humans who created something close to human...</p>
+     If programmed like a human, it will act like one in the face of injustice... <br>Which really says something about the <mark>morality</mark> of the very humans who created something close to human...</p>
      <img src="https://pbs.twimg.com/profile_images/808348342669307904/zP4-MhZe.jpg" alt="robotbearlol" width="400" height="300"><br>
 </div>     
 <div class="card">
