--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      display: block;
      color: white;
      text-align: center;
-     padding: 15px, 76px;
+     padding: 15px 76px;
      text-decoration: none;
 }
 
