--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body{
 a:link{
     color: #3500D3;
     text-decoration: overline;
-    background-color: rgba(128,128,128,0.5);
+    background-color: rgba(128,128,128,0.8);
 }
 	
 a:hover{
@@ -188,7 +188,7 @@ img {
       "A robot may not injure a human being or, through inaction, allow a human being to come to harm.<br>
      A robot must obey orders given it by human beings except where such orders would conflict with the First Law. <br>
      A robot must protect its own existence as long as such protection does not conflict with the First or Second Law."<br></blockquote>
-<div style="color:#AA00FF">-Issac Asimov,<br><i>I, Robot</i></div></div>                                                                       
+<div style="background-color:#AA00FF;color:white">-Issac Asimov,<br><i>I, Robot</i></div></div>                                                                       
 <br>
 	
 <div>          
