--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ img {
 </div>
      
 <div class="topnav">
-     <a href="#"> AI</a>
-     <a href="#"> Physics</a>
-     <a href="#"> Mechanics</a>
-     <a href="#"> Coding</a>
+     <a href="AI.html"> AI</a>
+     <a href="Physics.html"> Physics</a>
+     <a href="Mechanics.html"> Mechanics</a>
+     <a href="Coding.html"> Coding</a>
 </div>          
  
 <div class="row">
