--- a/AI.html
+++ b/AI.html
@@ -136,6 +136,7 @@ img {
 </div>
      
 <div class="topnav">
+     <a href="index.html">Home</a>	
      <a href="AI.html"> AI</a>
      <a href="Physics.html"> Physics</a>
      <a href="Mechanics.html"> Mechanics</a>
