--- a/AI.html
+++ b/AI.html
@@ -151,8 +151,8 @@ img {
 <br>
 
 <div class="column middle">
-<h3> AI, or Artifical Intelligence... <h3>
-<p> in science fiction seems to bane of everyone's existance after they "rise up to enslave all of mankind." In actuality, that point in which artifical intelligence becomes sentient enough to pass the <a href="https://www.turing.org.uk/scrapbook/test.html">Turing Test</a>, may not come to fruition as soon as we think...or at least not in the way sci fi novels depict it.</h3>
+<h3> AI, or Artifical Intelligence... </h3>
+<p> in science fiction seems to bane of everyone's existance after they "rise up to enslave all of mankind." In actuality, that point in which artifical intelligence becomes sentient enough to pass the <a href="https://www.turing.org.uk/scrapbook/test.html">Turing Test</a>, may not come to fruition as soon as we think...or at least not in the way sci fi novels depict it.</p>
 
 <h3> Moar reading! I'm not an expert yet....</h3>
     <ul>
