--- a/Physics.html
+++ b/Physics.html
@@ -151,7 +151,7 @@ img {
 <br>
 
 <div class="column middle">
-<h3> Physics <h3>
+<h3> Physics </h3>
 <p>Physics have a major role to play in the the development of robotics and artificial intelligence...</p>
 
 <h3> Moar reading! I'm not an expert yet....</h3>
