--- a/Physics.html
+++ b/Physics.html
@@ -160,7 +160,7 @@ img {
         <br>
         <li><a href="https://jaan.io/how-does-physics-connect-machine-learning/">How physics can connect to machine learning.</a></li>
         <br>
-        <li><a href="https://thinkglobalschool.org/the-physics-of-robots/">The physics of robots../</a></li>
+        <li><a href="https://thinkglobalschool.org/the-physics-of-robots/">The physics of robots...</a></li>
         
      </ul>
      
