--- a/Mechanics.html
+++ b/Mechanics.html
@@ -152,7 +152,7 @@ img {
 
 <div class="column middle">
 <h3> Mechanics</h3>
-<p>Mechanical engineers, electrical engineers, computer scientists are all used to form a team--aspects of a team for the advancement of robotics. After all, a robot has several intricate parts that usually require some sort of specialization to complete that particular area.</p>
+<p>Mechanical engineers, electrical engineers, programmers are all used to form a team--aspects of a team for the advancement of robotics. After all, a robot has several intricate parts that usually require some sort of specialization to complete that particular area. Otherwise the team consists of mostly robotics engineers; it is a rarity to see big robotics projects being handled by just one person...</p>
 
 <h3> Moar reading! I'm not an expert yet....</h3>
     <ul>
@@ -160,7 +160,7 @@ img {
         <br>
         <li><a href="https://www.learnhowtobecome.org/electrical-engineer/">Electrical engineers</a></li>
         <br>
-        <li><a href="https://study.com/articles/Computer_Scientist_Job_Description_Duties_and_Requirements.html">Computer scientists</a></li>
+        <li><a href="https://study.com/articles/Computer_Scientist_Job_Description_Duties_and_Requirements.html">programmers</a></li>
         
      </ul>
      
