--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ li {
 }
 
 i {
-     font-size: 20px;
+     font-size: 35px;
      color: white;  
      shadow: 2px 3px 4px;
 }          
@@ -189,7 +189,7 @@ img {
       "A robot may not injure a human being or, through inaction, allow a human being to come to harm.<br>
      A robot must obey orders given it by human beings except where such orders would conflict with the First Law. <br>
      A robot must protect its own existence as long as such protection does not conflict with the First or Second Law."<br></blockquote>
-<div style="background-color:#AA00FF;color:white">-Issac Asimov,<br><i>I, Robot</i></div></div>                                                                       
+<div style="color:white">-Issac Asimov,<br><i>I, Robot</i></div></div>                                                                       
 <br>
 	
 <div>          
