--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ img {
 <div class="column middle">
 	 <h3>The Marvelous World of Technology</h3>
      <p>Technology is improving at increasingly expotential rate. What was thought to be once impossible to do in fields such as medicine, is now possible in almost any shape or form.</p>
+	<a href="https://www.thoughtco.com/timeline-of-robots-1992363" title="A Brief History of Robotics"> A Brief History of Robotics ></a>
+	<a href="https://www.robots.com/faq/what-are-the-main-types-of-robots" title="Types of robots"> Types of Robots ></a>
 </div>
 
 <hr>
